<resources>
    <string name="app_name">Demo Begear</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="detail_activity">Detail</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="username_null">Username is mandatory!</string>

    <string name="psw_name">Name</string>
    <string name="psw_url">Url</string>
    <string name="psw_username">Username</string>
    <string name="psw_psw">Password</string>
    <string name="psw_note">Note</string>
    <string name="title_activity_maps">Map</string>
</resources>
